[*] Make EventHandlerMethodWithObject public.
[*] Correctly handle null ContentType for JsonFileMessageRepository.
[*] Fix JsonFileMessageRepository.GetAsync only one record return problem. #66
[*] Return empty MessageQuery if CreateFromString is called with empty string.
[*] All files-based repositores use FileShare.Read instead of FileShare.ReadWrite sharing.

0.6.0 [2018-12-31]
[*] Update ContentType and ErrorType compare logic for repositories.
[*] Update message query filter logic.
[+] New message query string constructor.
[-] Simplify SQL generation functionality.
[+] Fix status field handle for SQL.
[-] Remove Saritasa.Tools.Domain dependency and related pipelines.
[*] Improve query method parameters evaluation.
[*] Other small bugfixes.
[+] SourceLink support.
[*] Comments update.

0.5.4 [2018-06-22]
[*] Fix WithAsync query pipeline call for GetAwaiter.
[*] Fix exceptions handle for async commands.
[*] Change SQL Server init script to support older versions.

0.5.3 [2018-05-29]
[+] Add additional methods to manipulate with middlewares array.
[*] Move pipeline initialization to Invoke.

0.5.2 [2018-05-21]
[+] Add PrepareMessageContextMiddleware, move content check and preparation to middleware.
[+] Add EmptyMiddleware.
[*] Exclude "$id" and "EntityKey" Entity Frameworks fields from serialization.
[*] Rename Configure method to AddStandardMiddlewares.

0.5.0 [2018-05-04]
[+] Implement throwing original exception. Look UseExceptionDispatchInfo option.
[*] Fix empty constructor expression generate.
[*] Refactor pipelines initialization logic. New pipeline builder Configure method.
[+] Initial PostgreSQL message repository support.
[+] Ability to pass additional param to middleware for commands and events.
[-] Remove default table indexes by CreatedAt and Type columns.
[+] If method handler accepts CancellationToken as last parameter the source token will be passed.
[*] Fix internal logging output.

0.4.5 [2017-12-11]
[*] Fix incorrect package included versions.