@@ -5,6 +5,7 @@
 [*] Fix JsonFileMessageRepository.GetAsync only one record return problem. #66
 [*] Return empty MessageQuery if CreateFromString is called with empty string.
 [*] All files-based repositores use FileShare.Read instead of FileShare.ReadWrite sharing.
+[*] CaptureExceptionDispatchInfo did not work for query pipeline sync mode. #64
 
 0.6.0 [2018-12-31]
 [*] Update ContentType and ErrorType compare logic for repositories.
